--- a/style.css
+++ b/style.css
@@ -24,6 +24,11 @@ a{
     margin:0 auto;
     border: 1px solid;
 }
+.container:after{
+    content: '';
+    display: block;
+    clear: both;
+}
 
 header{
     border: 1px solid;
