--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ a{
 
 .medsos{
     padding: 5px 0;
-    background-color: #7AB2D3;
+    background-color: #2C2C2C;
 }
 
 .medsos ul li {
@@ -22,7 +22,6 @@ a{
 .container {
     width: 80%;
     margin:0 auto;
-    border: 1px solid;
 }
 .container:after{
     content: '';
@@ -31,15 +30,69 @@ a{
 }
 
 header{
-    border: 1px solid;
 
 }
 header h1{
-    border: 1px solid;
     float: left;
+    padding:15px 0 ;
+    color:#2C2C2C ;
 }
 header ul{
-    border: 1px solid;
     float: right;
+    margin: 0;
+    padding: 0;
+}
+header ul li{
+    display: inline-block;
+    margin: 0;
+    padding: 0;
+    color:#2C2C2C ;
+}
+header ul li a{
+    padding: 24px 20px;
+    display: inline-block;
+}
+header ul li a:hover{
+    background-color: #787E7B;
+    color: white;
+}
+/* mising */
+
+
+.bener{
+    height: 60vh ;
+    
+    background-image: url('../img/gmbr1.jpg');
+    background-size: cover;
+    background-position: center top; /* Atur gambar agar lebih ke atas */
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
+.bener.after{
+    content: '';
+    display: block;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+.bener h2{
+    color: white;
+    padding:20px 25px ;
+    border: 3px solid white;
+    background-color: rgba(255, 255, 255, 0.8);
+    color: black;
+         
+}
+section{
+    padding:50px 0;
+}
+
+section h2{
+    text-align: center;
+    color: #333333;
+}
